force-app/main/default/objects/BTSP_Participation__c/BTSP_Participation__c.object-meta.xml
<CustomObject>
    <label>BTSP Participation</label>
    <nameField>
        <displayFormat>PN - {0000000}</displayFormat>
        <label>BTSP Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BTSP Participations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>