force-app/main/default/objects/BTSP_Participation__c/fields/Attended_Program__c.field-meta.xml
<CustomField>
    <fullName>Attended_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Program</label>
    <type>Checkbox</type>
</CustomField>