force-app/main/default/objects/BTSP_Participation__c/fields/Breakthrough_ID__c.field-meta.xml
<CustomField>
    <fullName>Breakthrough_ID__c</fullName>
    <description>Program Engagement: National ID</description>
    <label>Breakthrough ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>