force-app/main/default/objects/BTSP_Participation__c/fields/BTSP_Key__c.field-meta.xml
<CustomField>
    <fullName>BTSP_Key__c</fullName>
    <description>Contact ID:Program engagement ID:Term used to determine if a BTSP Participation record has already been created</description>
    <label>BTSP Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>