force-app/main/default/objects/BTSP_Participation__c/fields/BTSP_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>BTSP_Record_Type_ID__c</fullName>
    <formula>&quot;123456789&quot;</formula>
    <label>BTSP Record Type ID</label>
    <type>Text</type>
</CustomField>