force-app/main/default/objects/BTSP_Participation__c/fields/Communication_Attended__c.field-meta.xml
<CustomField>
    <fullName>Communication_Attended__c</fullName>
    <label>Communication Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>