force-app/main/default/objects/BTSP_Participation__c/fields/Communication_Core_Attended__c.field-meta.xml
<CustomField>
    <fullName>Communication_Core_Attended__c</fullName>
    <description>Number of core communication touchpoints attended. Counts touchpoints where Count as Dosage = true, Avenue = Phone/Text/Email/Other, Core = true, and Status = Completed.</description>
    <inlineHelpText>Total core communication touchpoints (phone, text, email, other) this participant attended.</inlineHelpText>
    <label>Communication Core Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>