force-app/main/default/objects/BTSP_Participation__c/fields/Communication_Core_Offered__c.field-meta.xml
<CustomField>
    <fullName>Communication_Core_Offered__c</fullName>
    <description>Number of core communication touchpoints offered. Counts touchpoints where Count as Dosage = true, Avenue = Phone/Text/Email/Other, Core = true, and Status = Completed or Attempted.</description>
    <inlineHelpText>Total core communication touchpoints (phone, text, email, other) offered to this participant.</inlineHelpText>
    <label>Communication Core Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>