force-app/main/default/objects/BTSP_Participation__c/fields/Communication_Offered__c.field-meta.xml
<CustomField>
    <fullName>Communication_Offered__c</fullName>
    <label>Communication Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>