force-app/main/default/objects/BTSP_Participation__c/fields/Communication_Optional_Attended__c.field-meta.xml
<CustomField>
    <fullName>Communication_Optional_Attended__c</fullName>
    <description>Number of optional communication touchpoints attended. Counts touchpoints where Count as Dosage = true, Avenue = Phone/Text/Email/Other, Core = false, and Status = Completed.</description>
    <inlineHelpText>Total optional communication touchpoints (phone, text, email, other) this participant attended.</inlineHelpText>
    <label>Communication Optional Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>