force-app/main/default/objects/BTSP_Participation__c/fields/Core_Programming_Days_Attended__c.field-meta.xml
<CustomField>
    <fullName>Core_Programming_Days_Attended__c</fullName>
    <description>Number of core programming days attended by this participant.</description>
    <inlineHelpText>Total number of core programming days this participant actually attended.</inlineHelpText>
    <label>Core Programming Days Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>