force-app/main/default/objects/BTSP_Participation__c/fields/Core_Programming_Days_Offered__c.field-meta.xml
<CustomField>
    <fullName>Core_Programming_Days_Offered__c</fullName>
    <description>Number of core programming days offered. Sum of Service Sessions or Service Delivery records from core programming Service Schedules.</description>
    <inlineHelpText>Total number of core programming days offered to this participant from core Service Schedules.</inlineHelpText>
    <label>Core Programming Days Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>