force-app/main/default/objects/BTSP_Participation__c/fields/Date_Exited_Program__c.field-meta.xml
<CustomField>
    <fullName>Date_Exited_Program__c</fullName>
    <description>Program Engagement: End Date</description>
    <label>Date Exited Program</label>
    <type>Date</type>
</CustomField>