force-app/main/default/objects/BTSP_Participation__c/fields/Exited_Program__c.field-meta.xml
<CustomField>
    <fullName>Exited_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on Program Engagement Stage (with translation: Active = No, Inactive = Yes)</description>
    <label>Exited Program</label>
    <type>Checkbox</type>
</CustomField>