force-app/main/default/objects/BTSP_Participation__c/fields/Graduation_Years__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Years__c</fullName>
    <label>Graduation Years</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2031</fullName>
            </value>
            <value>
                <fullName>2032</fullName>
            </value>
            <value>
                <fullName>2033</fullName>
            </value>
            <value>
                <fullName>2034</fullName>
            </value>
            <value>
                <fullName>2035</fullName>
            </value>
            <value>
                <fullName>2036</fullName>
            </value>
            <value>
                <fullName>2037</fullName>
            </value>
            <value>
                <fullName>2038</fullName>
            </value>
            <value>
                <fullName>2039</fullName>
            </value>
            <value>
                <fullName>2040</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>