force-app/main/default/objects/BTSP_Participation__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>To indicate the integration status with national</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Sync</fullName>
                <default>true</default>
                <label>Pending Sync</label>
            </value>
            <value>
                <fullName>Sync Complete</fullName>
            </value>
            <value>
                <fullName>Syncing Error</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Fall Back</fullName>
                <isActive>false</isActive>
                <label>Fall Back</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Not Synced</fullName>
                <isActive>false</isActive>
                <label>Not Synced</label>
            </value>
            <value>
                <fullName>Posted</fullName>
                <isActive>false</isActive>
                <label>Posted</label>
            </value>
            <value>
                <fullName>Update Pending</fullName>
                <isActive>false</isActive>
                <label>Update Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>