force-app/main/default/objects/BTSP_Participation__c/fields/Last_Participation_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Participation_Sync__c</fullName>
    <description>Date of the most recent participation sync from the National Org. Populated by the Make integration after a successful writeback.</description>
    <inlineHelpText>The date this record was last synced with the National Org.</inlineHelpText>
    <label>Last Participation Sync</label>
    <type>Date</type>
</CustomField>