force-app/main/default/objects/BTSP_Participation__c/fields/Non_Core_Programming_Days_Offered__c.field-meta.xml
<CustomField>
    <fullName>Non_Core_Programming_Days_Offered__c</fullName>
    <description>Number of non-core programming days offered. Sum of Service Sessions or Service Delivery records from non-core programming Service Schedules.</description>
    <inlineHelpText>Total number of non-core programming days offered to this participant from non-core Service Schedules.</inlineHelpText>
    <label>Non-Core Programming Days Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>