force-app/main/default/objects/BTSP_Participation__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BTSP Participations</relationshipLabel>
    <relationshipName>BTSP_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>