force-app/main/default/objects/BTSP_Participation__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <formula>Program_Engagement__r.pmdm__Contact__r.Full_Name__c</formula>
    <label>Participant Name</label>
    <type>Text</type>
</CustomField>