force-app/main/default/objects/BTSP_Participation__c/fields/Participation_ID_from_National__c.field-meta.xml
<CustomField>
    <fullName>Participation_ID_from_National__c</fullName>
    <description>The Salesforce Record ID of the matching Participation record in the National org. Used for writeback operations during participation sync.</description>
    <inlineHelpText>Record ID of the corresponding Participation record in the National Salesforce org, used for sync writeback.</inlineHelpText>
    <label>Participation ID from National</label>
    <length>18</length>
    <type>Text</type>
</CustomField>