force-app/main/default/objects/BTSP_Participation__c/fields/Participation_Value__c.field-meta.xml
<CustomField>
    <fullName>Participation_Value__c</fullName>
    <label>Participation Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed Term</fullName>
            </value>
            <value>
                <fullName>Did Not Participate</fullName>
            </value>
            <value>
                <fullName>Withdrew Early From Term</fullName>
            </value>
            <value>
                <fullName>Default Outcome</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>