force-app/main/default/objects/BTSP_Participation__c/fields/Programming_Days_Attended__c.field-meta.xml
<CustomField>
    <fullName>Programming_Days_Attended__c</fullName>
    <label>Programming Days Attended</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>