force-app/main/default/objects/BTSP_Participation__c/fields/Programming_Days_Required__c.field-meta.xml
<CustomField>
    <fullName>Programming_Days_Required__c</fullName>
    <label>Programming Days Required</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>