force-app/main/default/objects/BTSP_Participation__c/fields/Reason_Exited_Program__c.field-meta.xml
<CustomField>
    <fullName>Reason_Exited_Program__c</fullName>
    <description>Program Engagement: Reason Inactive in Program</description>
    <label>Reason Exited Program</label>
    <length>100</length>
    <type>Text</type>
</CustomField>