force-app/main/default/objects/BTSP_Participation__c/fields/Source_OrgId__c.field-meta.xml
<CustomField>
    <fullName>Source_OrgId__c</fullName>
    <formula>$Organization.Id</formula>
    <label>Source OrgId</label>
    <type>Text</type>
</CustomField>