force-app/main/default/objects/BTSP_Participation__c/fields/System_Information__c.field-meta.xml
<CustomField>
    <fullName>System_Information__c</fullName>
    <description>System Information notifications</description>
    <label>System Information</label>
    <type>TextArea</type>
</CustomField>