force-app/main/default/objects/BTSP_Participation__c/fields/X1_1_Attended__c.field-meta.xml
<CustomField>
    <fullName>X1_1_Attended__c</fullName>
    <label>1:1 Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>