force-app/main/default/objects/BTSP_Participation__c/fields/X1_1_Core_Attended__c.field-meta.xml
<CustomField>
    <fullName>X1_1_Core_Attended__c</fullName>
    <description>Number of core 1:1 touchpoints attended. Counts touchpoints where Count as Dosage = true, Avenue = Video Call or In Person, Core = true, and Status = Completed.</description>
    <inlineHelpText>Total core 1:1 touchpoints (video call or in person) this participant attended.</inlineHelpText>
    <label>1:1 Core Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>