force-app/main/default/objects/BTSP_Participation__c/fields/X1_1_Offered__c.field-meta.xml
<CustomField>
    <fullName>X1_1_Offered__c</fullName>
    <label>1:1 Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>