force-app/main/default/objects/BTSP_Participation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attended_Program__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exited_Program__c</columns>
    <columns>Participant__c</columns>
    <columns>Participant_Name__c</columns>
    <columns>Program_Engagement__c</columns>
    <columns>Term__c</columns>
    <columns>BTSP_Key__c</columns>
    <columns>Integration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>